# lowband

./: .env.example  .gitignore  Cargo.toml  README.md  app_spec.example.xml  app_spec.txt  cargo-test-lbtp.sh  cargo-test-messaging.sh  cargo-test.sh  claw-forge.yaml  gen_dicts.py  linker-wrapper.sh  run.sh
.cargo/: config.toml
.claude/commands/: create-spec.md  expand-project.md  fix-spec.md  import-spec.md
.claude/skills/run-lowband/: SKILL.md  smoke.sh  voice-call.sh
.claude/skills/run-lowband/shell-probe/: Cargo.toml
.claude/skills/run-lowband/shell-probe/src/: main.rs
.github/workflows/: ci.yml  mobile-preflight.yml  pages.yml  release.yml
bench/: Cargo.toml
bench/src/: lib.rs
bench/tests/: agc_voice_gate.rs  audio_60ms_frames.rs  audio_quality.rs  av1_reference_frame.rs  bandwidth_collapse.rs  coarse_pass_latency.rs  codec_gear_per_stream.rs  connection_setup_timing.rs  control_grant_injection.rs  control_loop.rs  dred_governor.rs  dtx_silence.rs  echo_canceller.rs  entropy_palette_index.rs  first_pass_legibility.rs  gear_availability.rs  governor_load_shed.rs  governor_summary.rs  guardrail_gear_switch.rs  input_channel_priority.rs  input_wire_load.rs  intra_refresh.rs  latency_gate.rs  lbrr_fec.rs  merge_ratio.rs  model_eval_card.rs  model_watchdog.rs  motion_encoder_bitrate.rs  mouse_coalesce_refresh.rs  nat_keepalive.rs  neural_head_gear_gate.rs  neural_runtime.rs  neural_vocoder_gate.rs  noise_suppressor.rs  ocr_accuracy.rs  openh264_fallback.rs  palette_color_limit.rs  palette_tile_encoder.rs  panic_key_latency.rs  residual_loss.rs  (+19 more)
core/crypto/: Cargo.toml
core/crypto/src/: key_exchange.rs  known_peers.rs  lib.rs  noise_ik.rs  relay_guard.rs  short_auth_string.rs  udp_session.rs
core/lbtp/: Cargo.toml
core/lbtp/src/: cellular.rs  congestion.rs  connection.rs  delay.rs  fec.rs  hole_punch.rs  ice_candidate.rs  lib.rs  mtu.rs  nat_keepalive.rs  pacer.rs  path.rs  seq.rs  tcp_fallback.rs  turn_relay.rs
core/lowbandd/: Cargo.toml
core/lowbandd/src/: adpcm.rs  ai_label.rs  audio_io.rs  av1_codec.rs  dataplane.rs  file_transfer.rs  inbound.rs  main.rs  mesh.rs  mesh_voice.rs  neural.rs  neural_codec.rs  neural_head.rs  neural_train.rs  ocr.rs  opus_codec.rs  picture.rs  quality.rs  quality_indicator.rs  screen_transfer.rs  session.rs  stun.rs  vmaf_cli.rs  voice.rs  voice_loop.rs
core/messaging/: Cargo.toml
core/messaging/.cargo/: config.toml
core/messaging/src/: audit.rs  channel.rs  chat.rs  clipboard.rs  grants.rs  lib.rs  panic_key.rs  qos_observer.rs  session_records.rs  wire.rs
core/messaging/tests/: compliance.rs
core/nn/: Cargo.toml
core/nn/src/: capability_probe.rs  eval_card.rs  gear_availability.rs  head_gear_gate.rs  lib.rs  model_watchdog.rs  runtime.rs  warm_pool.rs
core/obs/: Cargo.toml
core/obs/src/: lib.rs  metrics_trace.rs  ocr_probe.rs  quality_bar_lag.rs  quality_indicator.rs  sender.rs  telemetry.rs  vmaf_sample.rs
core/platform/: Cargo.toml
core/platform/.cargo/: config.toml
core/platform/src/: agc.rs  collapse_audio.rs  control_loop.rs  cpu_ceiling.rs  cpu_telemetry.rs  cursor_sender.rs  denoise_prefilter.rs  dred_sender.rs  dtx.rs  echo_canceller.rs  elevation.rs  fallback_detector.rs  gear_policy.rs  governor_load_shed.rs  governor_summary.rs  input_channel_sender.rs  input_injection.rs  input_latency_budget.rs  intra_refresh.rs  ipc.rs  jitter_buffer.rs  keypoint_extractor.rs  lbrr_fec.rs  lib.rs  mic_capture.rs  motion_encoder.rs  neural_vocoder.rs  noise_suppressor.rs  opus_decoder.rs  opus_encoder.rs  opus_packetizer.rs  plc_chain.rs  reference_frame_sender.rs  screen_capture.rs  screen_encoder.rs  stream_drop_policy.rs  synthesis_network.rs  temporal_svc.rs  thermal.rs  tier.rs  (+5 more)
core/signaling/: Cargo.toml
core/signaling/src/: client.rs  lib.rs  main.rs  room.rs
core/signaling/tests/: client_rendezvous.rs  mesh_room.rs
core/xfer/: Cargo.toml  build.rs
core/xfer/.cargo/: config.toml
core/xfer/src/: cache.rs  chunker.rs  compress.rs  fec.rs  hash.rs  lib.rs  persistent_cache.rs  resume.rs  scheduler.rs
docs/: go-to-market.md  lowband-architecture.md  lowband-design.md  lowband-prd.md  platform-elevation.md  prd-eval-v1.2.md
marketing-site/: README.md  biome.json  index.html  package-lock.json  package.json  vite.config.ts
marketing-site/src/: main.ts  style.css
mobile/: README.md
mobile/android/: settings.gradle.kts
mobile/android/app/: build.gradle.kts
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/java/dev/lowband/viewer/: MainActivity.kt
mobile/android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
mobile/android/app/src/main/res/layout/: activity_main.xml
mobile/android/app/src/main/res/values/: strings.xml  themes.xml
mobile/ios/: ExportOptions.plist  project.yml
mobile/ios/LowBandViewer/: JoinView.swift  LowBandViewerApp.swift
models/keypoint_extractor/: eval_card.toml
models/neural_plc/: eval_card.toml
models/neural_vocoder/: eval_card.toml
models/noise_suppressor/: eval_card.toml
models/synthesis_network/: eval_card.toml
packaging/: build-dist.sh
packaging/linux/: lowbandd.service  org.lowband.daemon.policy  postinstall.sh
packaging/macos/: build_pkg.sh  distribution.xml
packaging/macos/entitlements/: lowband-ui.entitlements  lowbandd.entitlements
packaging/macos/launchd/: com.lowband.lowbandd.plist
packaging/macos/mdm/: lowband_pppc.mobileconfig
packaging/macos/scripts/: postinstall  preinstall
packaging/windows/: build_msi.ps1  lowband.wxs
packaging/windows/mdm/: lowband.admx
packaging/windows/mdm/en-US/: lowband.adml
proto/: ipc.fbs
shells/: Cargo.toml
shells/src/: audit_export.rs  capability_indicator.rs  consent_screen.rs  gear_badge.rs  join_screen.rs  lib.rs  panic_control.rs  pointer_overlay.rs  quality_bar.rs  relay_warning.rs  revocation_control.rs  session_summary.rs  ui_shell.rs
tests/e2e/: Cargo.toml
tests/e2e/src/: lib.rs
tests/e2e/tests/: session_establishment.rs  signaling.rs  uc1.rs  uc2.rs  uc3.rs
