[package]
name = "lowband-crypto"
version = "0.1.0"
edition = "2021"
description = "LowBand end-to-end encryption — Noise-IK, ChaCha20-Poly1305, and session key management"

[dependencies]
chacha20poly1305 = "0.11.0"
hkdf = "0.12"
rand_core = { version = "0.6", features = ["getrandom"] }
sha2 = "0.10"
x25519-dalek = "2"
lowband-lbtp = { path = "../lbtp" }
