[package]
name = "lowbandd"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "LowBand core daemon — least-privilege system service, separate from the UI shell"

[[bin]]
name = "lowbandd"
path = "src/main.rs"

[features]
# Production voice codec via system libopus (FR-2). Off by default so the
# workspace builds without a C toolchain / libopus; the CI `voice-opus` job
# installs libopus-dev and builds+tests with `--features opus`. Without it,
# the voice path uses the pure-Rust interim ADPCM codec.
opus = ["dep:opus"]

[dependencies]
lowband-platform = { path = "../platform" }
lowband-signaling = { path = "../signaling" }
lowband-crypto = { path = "../crypto" }
lowband-messaging = { path = "../messaging" }
lowband-xfer = { path = "../xfer", features = ["hash"] }
# Links system libopus via pkg-config (see the `opus` feature above).
opus = { version = "0.3", optional = true }

[dev-dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt", "macros", "net"] }
