[package]
name = "lowbandd"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "LowBand core daemon — least-privilege system service, separate from the UI shell"

[[bin]]
name = "lowbandd"
path = "src/main.rs"

[features]
# Production voice codec via system libopus (FR-2). Off by default so the
# workspace builds without a C toolchain / libopus; the CI `voice-opus` job
# installs libopus-dev and builds+tests with `--features opus`. Without it,
# the voice path uses the pure-Rust interim ADPCM codec.
opus = ["dep:opus"]
# Production AV1 camera codec (FR-8). `av1-encode` pulls only rav1e (the
# pure-Rust AV1 encoder — builds anywhere, so the encode side is testable
# locally). `av1` adds dav1d (system libdav1d) for decode, exercised by the
# CI `camera-av1` job. Without these, photographic tiles use the interim DCT.
av1-encode = ["dep:rav1e"]
av1 = ["av1-encode", "dep:dav1d"]

[dependencies]
lowband-platform = { path = "../platform" }
lowband-signaling = { path = "../signaling" }
lowband-crypto = { path = "../crypto" }
lowband-messaging = { path = "../messaging" }
lowband-xfer = { path = "../xfer", features = ["hash"] }
# Links system libopus via pkg-config (see the `opus` feature above).
opus = { version = "0.3", optional = true }
# rav1e: pure-Rust AV1 encoder (no C). dav1d: system libdav1d decoder.
rav1e = { version = "0.8", optional = true, default-features = false }
dav1d = { version = "0.10", optional = true }

[dev-dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt", "macros", "net"] }
