[package]
name = "lowbandd"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "LowBand core daemon — least-privilege system service, separate from the UI shell"

[[bin]]
name = "lowbandd"
path = "src/main.rs"

[features]
# Production voice codec via system libopus (FR-2). Off by default so the
# workspace builds without a C toolchain / libopus; the CI `voice-opus` job
# installs libopus-dev and builds+tests with `--features opus`. Without it,
# the voice path uses the pure-Rust interim ADPCM codec.
opus = ["dep:opus"]
# Production AV1 camera codec (FR-8). `av1-encode` pulls only rav1e (the
# pure-Rust AV1 encoder — builds anywhere, so the encode side is testable
# locally). `av1` adds dav1d (system libdav1d) for decode, exercised by the
# CI `camera-av1` job. Without these, photographic tiles use the interim DCT.
av1-encode = ["dep:rav1e"]
av1 = ["av1-encode", "dep:dav1d"]
# Real mic/speaker device I/O via cpal (ALSA/CoreAudio/WASAPI). Off by default
# (needs the system audio lib); the CI `audio-io` job installs libasound2-dev
# and build-tests it. The device-independent plumbing is always compiled.
audio = ["dep:cpal"]
# ONNX neural-inference runtime via tract (pure-Rust — no C/onnxruntime). Loads
# and executes real ONNX models; the production vocoder/head-video models are a
# separate trained-data deliverable (v1.1). Off by default to keep build times
# down; the `neural` CI job runs it.
onnx = ["dep:tract-onnx"]

[dependencies]
lowband-platform = { path = "../platform" }
lowband-signaling = { path = "../signaling" }
lowband-crypto = { path = "../crypto" }
lowband-messaging = { path = "../messaging" }
lowband-xfer = { path = "../xfer", features = ["hash"] }
# Links system libopus via pkg-config (see the `opus` feature above).
opus = { version = "0.3", optional = true }
# rav1e: pure-Rust AV1 encoder (no C). dav1d: system libdav1d decoder.
rav1e = { version = "0.8", optional = true, default-features = false }
dav1d = { version = "0.11", optional = true }
# Cross-platform audio device I/O (see the `audio` feature above).
cpal = { version = "0.18", optional = true }
# Pure-Rust ONNX inference engine (see the `onnx` feature above).
tract-onnx = { version = "0.23", optional = true }

[dev-dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt", "macros", "net"] }
