[package]
name = "lowband-platform"
version = "0.1.0"
edition = "2021"
description = "LowBand platform integration — CPU ceiling, tier state, thermal pressure monitoring and gear degradation policy"

# No external dependencies: macOS uses sysctlbyname (libSystem, always linked),
# Linux uses std::fs over sysfs, Windows uses GetSystemPowerStatus (kernel32).
[dependencies]
flatbuffers = "24"

[dev-dependencies]

[target.'cfg(target_os = "linux")'.dependencies]

[target.'cfg(target_os = "macos")'.dependencies]

[target.'cfg(target_os = "windows")'.dependencies]
# Named-pipe IPC transport and ShellExecuteExW for the UAC secure-desktop hand-off.
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_UI_Shell",
] }
