[package]
name = "lowband-platform"
version = "0.1.0"
edition = "2021"
description = "LowBand platform integration — CPU ceiling, tier state, thermal pressure monitoring and gear degradation policy"

# Platform deps: macOS links CoreGraphics (always present), Linux links libei
# (system package), Windows links windows-sys for SendInput and named pipes.
[dependencies]
flatbuffers = "24"

[dev-dependencies]

[target.'cfg(target_os = "linux")'.dependencies]

[target.'cfg(target_os = "macos")'.dependencies]

[target.'cfg(target_os = "windows")'.dependencies]
# Named-pipe IPC transport and ShellExecuteExW for the UAC secure-desktop hand-off.
# Named-pipe IPC, UAC hand-off, and SendInput for keyboard/mouse injection.
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
] }
