[package]
name = "lowband-platform"
version = "0.1.0"
edition = "2021"
description = "LowBand platform integration — CPU ceiling, tier state, thermal pressure monitoring and gear degradation policy"

# Platform deps: macOS links CoreGraphics (always present), Linux links libei
# (system package), Windows links windows-sys for SendInput and named pipes.
[features]
default = ["ipc"]
ipc = ["dep:flatbuffers"]

[dependencies]
flatbuffers = { version = "24", optional = true }
lowband-messaging = { path = "../../core/messaging" }
lowband-nn = { path = "../../core/nn" }

[dev-dependencies]

[target.'cfg(target_os = "linux")'.dependencies]

[target.'cfg(target_os = "macos")'.dependencies]

[target.'cfg(target_os = "windows")'.dependencies]
# Named-pipe IPC, UAC hand-off, and SendInput for keyboard/mouse injection.
# DXGI Desktop Duplication uses raw COM vtable calls (no windows-sys DXGI feature
# needed — windows-sys 0.59 does not expose Win32_Graphics_Dxgi).
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
] }
