[package]
name = "lowband-signaling"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "LowBand stateless signaling rendezvous service — session codes, offer/answer, ICE relay, TURN credentials"

[[bin]]
name = "lowband-signaling"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sled = "0.34"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["rt", "macros"] }
